extra email data block, some styles in paginator (no hover) and nav (trans border fixes ios jumps)

--- a/support/less/style.less
+++ b/support/less/style.less
@@ -139,7 +139,7 @@ body {
 }
 
 .navbar {
-  border: 0px;
+  border: 1px solid transparent;
   // opacity: 0.8;
 }
 
